Argen commit necessary recicleView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">PhoneStoreNew</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="select_category">Select Category</string>
+    <string name="zihuatanejo_gro">Zihuatanejo, Gro ↓</string>
+    <string name="view_all">view all</string>
+    <string name="ecommerce_nconcept">ecommerce\nconcept</string>
+    <string name="see_more">see more</string>
+    <string name="hot_sales">Hot sales</string>
+    <string name="search">Search</string>
+    <string name="books">Books</string>
+    <string name="health">Health</string>
+    <string name="computer">Computer</string>
+    <string name="phones">Phones</string>
 </resources>
